Fixed issue where layout wouldn't stretch to fit the screen in mobile mode

--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,6 @@ nav {
     .main .header {
       width: 100%; }
     .main .post {
-      width: 25%; } }
+      width: 30%; } }
 
 /*# sourceMappingURL=styles.css.map */
