--- a/styles.css.scss
+++ b/styles.css.scss
@@ -117,7 +117,7 @@ nav {
       width: 100%;
     }
     .post {
-      width: 25%;
+      width: 30%;
     }
   }
 }
